--- a/index.html
+++ b/index.html
@@ -8,11 +8,46 @@
     <script src="js/scripts.js"></script>
     <title>Javascript Flashcards</title>
   </head>
+
   <body>
     <div class="container">
-      <h1>Test</h1>
+      <div class="well">
+        <header class="well">
+          <h1>Test</h1>
+        </header>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn btn-info" id="javascript">Javascript</button>
+          <p>This is where the information will go</p>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-info" id="javascript">Javascript</button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-info" id="javascript">Javascript</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn btn-info" id="javascript">Javascript</button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-info" id="javascript">Javascript</button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-info" id="javascript">Javascript</button>
+        </div>
+      </div>
+
+
+
+
+
+
 
     </div>
-
   </body>
 </html>
