create js for first button.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4">
-          <button class="btn btn-info" id="javascript">Javascript</button>
+        <div class="col-md-4" id="javascript">
+          <button class="btn btn-info">Javascript</button>
           <p>This is where the information will go</p>
         </div>
         <div class="col-md-4">
           <button class="btn btn-info" id="javascript">Javascript</button>
+          <p>This is not javascript button</p>
         </div>
         <div class="col-md-4">
           <button class="btn btn-info" id="javascript">Javascript</button>
