add buttons, jquery toggle(), and html content

--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
       <div class="row">
         <div class="col-md-4" id="javascript">
           <button class="btn btn-info">Javascript</button>
-          <p>This is where the information will go</p>
+          <p>an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
         </div>
-        <div class="col-md-4">
-          <button class="btn btn-info" id="javascript">Javascript</button>
-          <p>This is not javascript button</p>
+        <div class="col-md-4" id="operators">
+          <button class="btn btn-info">Operators</button>
+          <p>Operators in JavaScript are very similar to operators that appear in other programming languages. The definition of an operator is a symbol that is used to perform an operation. Most often these operations are arithmetic (addition, subtraction, etc), but not always.</p>
         </div>
-        <div class="col-md-4">
-          <button class="btn btn-info" id="javascript">Javascript</button>
+        <div class="col-md-4" id="variables">
+          <button class="btn btn-info">Variables</button>
+          <p>JavaScript variables are containers for storing data values.</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-4">
-          <button class="btn btn-info" id="javascript">Javascript</button>
+        <div class="col-md-4" id="varNamConv">
+          <button class="btn btn-info">Variable Naming Conventions</button>
+          <p>Coding conventions are style guidelines for programming</p>
         </div>
-        <div class="col-md-4">
-          <button class="btn btn-info" id="javascript">Javascript</button>
+        <div class="col-md-4" id="functions">
+          <button class="btn btn-info">Functions</button>
+          <p></p>
         </div>
-        <div class="col-md-4">
-          <button class="btn btn-info" id="javascript">Javascript</button>
+        <div class="col-md-4" id="methods">
+          <button class="btn btn-info">Methods</button>
+          <p></p>
         </div>
       </div>
 
