add content to buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="well">
         <header class="well">
-          <h1>Test</h1>
+          <h1>Flashcards and Prepend/append Practice</h1>
         </header>
       </div>
 
@@ -39,11 +39,11 @@
         </div>
         <div class="col-md-4" id="functions">
           <button class="btn btn-info">Functions</button>
-          <p></p>
+          <p>A JavaScript function is a block of code designed to perform a particular task.</p>
         </div>
         <div class="col-md-4" id="methods">
           <button class="btn btn-info">Methods</button>
-          <p></p>
+          <p>JavaScript methods are the actions that can be performed on objects.</p>
         </div>
       </div>
 
