add js to prepend / append.  Add user and webpage ids to html

--- a/index.html
+++ b/index.html
@@ -47,10 +47,32 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn btn-primary" id="hello">Say "hello"</button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-inverse" id="goodbye">Say "goodbye"</button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-danger" id="stop">Say "stop copying me!"</button>
+        </div>
+      </div>
 
+      <div class="row">
 
+        <div class="col-md-6">
+          <h2>You said:</h2>
+          <ul class="unstyled" id="user">
+          </ul>
+        </div>
 
-
+        <div class="col-md-6">
+          <h2>The web page said back:</h2>
+          <ul class="unstyled" id="webpage">
+          </ul>
+        </div>
+      </div>
 
 
     </div>
