--- a/index.html
+++ b/index.html
@@ -17,31 +17,33 @@
         </header>
       </div>
 
+<!--id for div classes are obsolete as we have updated our buttons to use "(this)" generically  -->
+
       <div class="row">
-        <div class="col-md-4" id="javascript">
+        <div class="col-md-4 btnHolder" id="javascript">
           <button class="btn btn-info">Javascript</button>
           <p>an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
         </div>
-        <div class="col-md-4" id="operators">
+        <div class="col-md-4 btnHolder" id="operators">
           <button class="btn btn-info">Operators</button>
           <p>Operators in JavaScript are very similar to operators that appear in other programming languages. The definition of an operator is a symbol that is used to perform an operation. Most often these operations are arithmetic (addition, subtraction, etc), but not always.</p>
         </div>
-        <div class="col-md-4" id="variables">
+        <div class="col-md-4 btnHolder" id="variables">
           <button class="btn btn-info">Variables</button>
           <p>JavaScript variables are containers for storing data values.</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-4" id="varNamConv">
+        <div class="col-md-4 btnHolder" id="varNamConv">
           <button class="btn btn-info">Variable Naming Conventions</button>
           <p>Coding conventions are style guidelines for programming</p>
         </div>
-        <div class="col-md-4" id="functions">
+        <div class="col-md-4 btnHolder" id="functions">
           <button class="btn btn-info">Functions</button>
           <p>A JavaScript function is a block of code designed to perform a particular task.</p>
         </div>
-        <div class="col-md-4" id="methods">
+        <div class="col-md-4 btnHolder" id="methods">
           <button class="btn btn-info">Methods</button>
           <p>JavaScript methods are the actions that can be performed on objects.</p>
         </div>
